--- a/index.html
+++ b/index.html
@@ -459,16 +459,12 @@
                             <span class="paddedline txtRight" id="FIELD_RATT">Very Good</span>
                         </div>
                     </div></div></div></div></div></div></div></div><div id="CONTAINER_1" class="right-box"><div data-react-beautiful-dnd-draggable="1" class="sortable-item section-container SortableItem-sibling  data-SUMM"><div class="document-tool sec-tool" id="editIcons" style="right: -2px;"></div><div id="SECTION_SUMM50630d95-c518-4a94-8f73-055c12d79a49" class="section summary notdraggable SECTION_SUMM     " data-section-cd="SUMM"><div class=" doc-item"><div class=""><div class=""><div id="PARAGRAPH_SUMM_e2be409a-4993-aad2-1697-ff90a8692c5c" class="paragraph PARAGRAPH_SUMM firstparagraph  "><div class="clearfix doc-item">
-                        <div class="field singlecolumn" id="FIELD_FRFM"><p>I`ve
- been living in St. Petersburg for over four years. I was born in 
-Tallinn, then moved to Nizhny Novgorod, where I got a degree in applied 
-mathematics and computer science at the State Technical University of 
-Nizhny Novgorod. My experience in commercial development started with 
-developing mobile and web games. But I was always interested in open 
-technologies and also wanted to solve serious business tasks.<br>
-That’s why I decided to move from mobile game development to web 
-development. And now I`m improving in this direction and going to 
-continue my professional implementation in this way.</p></div>
+                        <div class="field singlecolumn" id="FIELD_FRFM">
+                            <p>
+                                Over the past 5 years, I have developed a wide range of projects using HTML5/CSS3, Javascript, PostgreSQL, MongoDB, MySQL and TypeScript including sites for startup companies and small businesses. I enjoy developing, coding and maintaining clean, professional, easy to navigate websites.
+                                <br><br>I can help you or your business create a website from design concept to a completed, polished and professional site. I can also help maintain and update existing websites.
+                            </p>
+                        </div>
                     </div></div></div></div></div></div></div><div data-react-beautiful-dnd-draggable="1" class="sortable-item section-container SortableItem-sibling  data-EXPR"><div class="document-tool sec-tool" id="editIcons" style="right: -2px;"></div><div id="SECTION_EXPRc67655c1-1cde-4d79-ba2f-fb4b82c2c687" class="section experience SECTION_EXPR   multi-para  " data-section-cd="EXPR"><div class=" doc-item"><div class="heading"><div class="sectiontitle" id="SECTIONNAME_EXPR">Work History<span class="rename-section text-rename"> </span></div></div><div class=""><div class="sortableInner"><div id="PARAGRAPH_EXPR_ec4a18f2-e1c6-44c9-c4d5-8a886af58735" class="paragraph datespara PARAGRAPH_EXPR firstparagraph  "><div class="clearfix doc-item">
                         <div class="paddedline date-content hidedates" dependency="JSTD|EDDT">
                             <span class="jobdates" dependency="JSTD">2007-03</span><span dependency="JSTD+EDDT"> - </span>
