--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                                 <span class="jobdates" id="FIELD_EDDT" format="%Y-%m">2021-10</span><br dependency="JTIT|COMP|JSTA|JCIT">
                             </div>
                             <span class="paddedline" dependency="JTIT">
-                                <span class="jobtitle txtBold" id="FIELD_JTIT">QA Automation R&amp;D</span>
+                                <span class="jobtitle txtBold" id="FIELD_JTIT">Development and research in testing</span>
                             </span>
                             <span class="paddedline locationGap txtItl" dependency="COMP|JSTA|JCIT">
                                 <span class="companyname" id="FIELD_COMP">Veeam Software</span><span dependency="COMP+JCIT|JSTA">,</span>
@@ -504,7 +504,7 @@
                                 <span class="jobdates" id="FIELD_EDDT" format="%Y-%m">2021-03</span><br dependency="JTIT|COMP|JSTA|JCIT">
                             </div>
                             <span class="paddedline" dependency="JTIT">
-                                <span class="jobtitle txtBold" id="FIELD_JTIT">Front-end Developer &amp; QA Automation Engineer</span>
+                                <span class="jobtitle txtBold" id="FIELD_JTIT">Front-end Developer and automation</span>
                             </span>
                             <span class="paddedline locationGap txtItl" dependency="COMP|JSTA|JCIT">
                                 <span class="companyname" id="FIELD_COMP">Ticket broker Ponominalu.ru</span><span dependency="COMP+JCIT|JSTA">,</span>
